--- a/config/database.yml
+++ b/config/database.yml
@@ -14,15 +14,13 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
-default: &default
+
+development:
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-
-development:
-  <<: *default
   database: shortener_development
 
   # The specified database role being used to connect to postgres.
@@ -56,7 +54,11 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see Rails configuration guide
+  # https://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: shortener_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
@@ -79,7 +81,11 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see Rails configuration guide
+  # https://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: shortener_production
   username: shortener
   password: <%= ENV['SHORTENER_DATABASE_PASSWORD'] %>
